# connectmap

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  PRE_COMMIT_CHECKLIST.md  README.md  SECURITY.md  app.py  pyproject.toml  setup_oauth.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: lint.yml
scripts/: check.sh  format.sh  lint.sh
templates/: index.html
